# demo-fastapi

./: docs.txt  pyproject.toml
fastapi/: consumer.py  db.py  dependencies.py  main.py  models.py  producer.py  seed.py
fastapi/db/: __init__.py  db_config.py  models.py
fastapi/routers/: login.py  products.py  users.py
payments/: consumer.py  db.py  main.py  models.py  producer.py  seed.py
tests/: consumer.py  db.py  index.html  models.py
