[tool.poetry]
name = "demo-fastapi"
version = "0.1.0"
description = "Demo Project"
authors = ["Nitesh Babu"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.110.0"}
peewee = "^3.17.1"
pydantic = "^2.6.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
